# gpr300-fa2024-Lysik-Celica

./: .gitignore  CMakeLists.txt
assignments/Assignment4/Assignment4/: Assembly-CSharp.csproj
assignments/Assignment4/Assignment4/Assets/: Blue.mat  Knot.prefab  Spline.prefab  SplineManager.cs  Splines.cs
assignments/Assignment4/Assignment4/Assets/Scenes/: SampleScene.unity
assignments/Assignment4/Assignment4/ProjectSettings/: ProjectSettings.asset  TagManager.asset
assignments/TestProject/: CMakeLists.txt  main.cpp
assignments/TestProject/assets/: post.frag
assignments/assignment0/: CMakeLists.txt  main.cpp
assignments/assignment0/assets/: lit.frag  lit.vert
assignments/assignment1/: main.cpp
assignments/assignment1/assets/: lit.frag  post.frag  post.vert  singleColor.frag
assignments/assignment2/: main.cpp
assignments/assignment2/assets/: debug.vert  depthShader.vert  lit.frag  post.frag  post.vert  shadow.frag  shadow.vert
assignments/assignment3/: CMakeLists.txt  main.cpp
assignments/assignment3/assets/: deferred.frag  depthShader.frag  depthShader.vert  geometry.frag  lightOrb.frag  lightOrb.vert  lighting.frag  lighting.vert
assignments/workSession/: CMakeLists.txt  main.cpp
assignments/workSession/assets/: lit.vert  water.frag  water.vert
assignments/workSession1/: CMakeLists.txt  main.cpp
assignments/workSession1/assets/: lit.frag  shell.frag
assignments/workSession2/: CMakeLists.txt  main.cpp
assignments/workSession3/: CMakeLists.txt  main.cpp
assignments/workSession3/assets/: height.frag  height.vert  transitions.frag
